--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "iconoir-react": "^5.3.0",
+    "jotai": "^1.8.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
