--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "iconoir-react": "^5.3.0",
     "jotai": "^1.8.4",
     "next": "12.3.0",
