--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "iconoir-react": "^5.3.0",
     "jotai": "^1.8.4",
     "next": "12.3.0",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
