--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@prisma/client": "^4.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@vercel/og": "^0.0.19",
     "iconoir-react": "^5.3.0",
     "jotai": "^1.8.4",
     "next": "12.3.0",
     "next-auth": "^4.10.3",
+    "puppeteer-core": "^19.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "underscore": "^1.13.6"
