--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "puppeteer-core": "^19.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.31.1",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
