--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^4.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@vercel/analytics": "^0.1.3",
     "@vercel/og": "^0.0.19",
     "iconoir-react": "^5.3.0",
     "jotai": "^1.8.4",
